--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,12 @@
     <servlet-class>com.example.web.LoginUser</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>PopulateCourseForm</servlet-name>
+    <display-name>PopulateCourseForm</display-name>
+    <description></description>
+    <servlet-class>com.example.web.PopulateCourseForm</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>PopulateAdminDashboard</servlet-name>
     <display-name>PopulateAdminDashboard</display-name>
     <description></description>
@@ -34,6 +40,18 @@
     <description></description>
     <servlet-class>com.example.web.PopulateStudentDashboard</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>UpdateCourse</servlet-name>
+    <display-name>UpdateCourse</display-name>
+    <description></description>
+    <servlet-class>com.example.web.UpdateCourse</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>DeleteCourse</servlet-name>
+    <display-name>DeleteCourse</display-name>
+    <description></description>
+    <servlet-class>com.example.web.DeleteCourse</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>RegisterUser</servlet-name>
     <url-pattern>/RegisterUser</url-pattern>
@@ -41,6 +59,10 @@
   <servlet-mapping>
     <servlet-name>LoginUser</servlet-name>
     <url-pattern>/LoginUser</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>PopulateCourseForm</servlet-name>
+    <url-pattern>/PopulateCourseForm</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>PopulateAdminDashboard</servlet-name>
@@ -53,6 +75,14 @@
   <servlet-mapping>
     <servlet-name>PopulateStudentDashboard</servlet-name>
     <url-pattern>/PopulateStudentDashboard</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UpdateCourse</servlet-name>
+    <url-pattern>/UpdateCourse</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>DeleteCourse</servlet-name>
+    <url-pattern>/DeleteCourse</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
