--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,12 @@
     <servlet-class>com.example.web.PopulateCourseForm</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>PopulateAssessmentCriteriaForm</servlet-name>
+    <display-name>PopulateAssessmentCriteriaForm</display-name>
+    <description></description>
+    <servlet-class>com.example.web.PopulateAssessmentCriteriaForm</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>PopulateAdminDashboard</servlet-name>
     <display-name>PopulateAdminDashboard</display-name>
     <description></description>
@@ -52,6 +58,18 @@
     <description></description>
     <servlet-class>com.example.web.DeleteCourse</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>CreateAssessmentCriteria</servlet-name>
+    <display-name>CreateAssessmentCriteria</display-name>
+    <description></description>
+    <servlet-class>com.example.web.CreateAssessmentCriteria</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>UpdateAssessmentCriteria</servlet-name>
+    <display-name>UpdateAssessmentCriteria</display-name>
+    <description></description>
+    <servlet-class>com.example.web.UpdateAssessmentCriteria</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>RegisterUser</servlet-name>
     <url-pattern>/RegisterUser</url-pattern>
@@ -63,6 +81,10 @@
   <servlet-mapping>
     <servlet-name>PopulateCourseForm</servlet-name>
     <url-pattern>/PopulateCourseForm</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>PopulateAssessmentCriteriaForm</servlet-name>
+    <url-pattern>/PopulateAssessmentCriteriaForm</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>PopulateAdminDashboard</servlet-name>
@@ -83,6 +105,14 @@
   <servlet-mapping>
     <servlet-name>DeleteCourse</servlet-name>
     <url-pattern>/DeleteCourse</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CreateAssessmentCriteria</servlet-name>
+    <url-pattern>/CreateAssessmentCriteria</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UpdateAssessmentCriteria</servlet-name>
+    <url-pattern>/UpdateAssessmentCriteria</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
