--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,12 @@
     <servlet-class>com.example.web.PopulateStudentDashboard</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>CreateCourse</servlet-name>
+    <display-name>CreateCourse</display-name>
+    <description></description>
+    <servlet-class>com.example.web.CreateCourse</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>UpdateCourse</servlet-name>
     <display-name>UpdateCourse</display-name>
     <description></description>
@@ -69,6 +75,12 @@
     <display-name>UpdateAssessmentCriteria</display-name>
     <description></description>
     <servlet-class>com.example.web.UpdateAssessmentCriteria</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>CreateStudentAssessment</servlet-name>
+    <display-name>CreateStudentAssessment</display-name>
+    <description></description>
+    <servlet-class>com.example.web.CreateStudentAssessment</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>RegisterUser</servlet-name>
@@ -99,6 +111,10 @@
     <url-pattern>/PopulateStudentDashboard</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
+    <servlet-name>CreateCourse</servlet-name>
+    <url-pattern>/CreateCourse</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>UpdateCourse</servlet-name>
     <url-pattern>/UpdateCourse</url-pattern>
   </servlet-mapping>
@@ -113,6 +129,10 @@
   <servlet-mapping>
     <servlet-name>UpdateAssessmentCriteria</servlet-name>
     <url-pattern>/UpdateAssessmentCriteria</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CreateStudentAssessment</servlet-name>
+    <url-pattern>/CreateStudentAssessment</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
