--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,12 @@
     <servlet-class>com.example.web.PopulateAssessmentCriteriaForm</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>PopulateStudentAssessmentForm</servlet-name>
+    <display-name>PopulateStudentAssessmentForm</display-name>
+    <description></description>
+    <servlet-class>com.example.web.PopulateStudentAssessmentForm</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>PopulateAdminDashboard</servlet-name>
     <display-name>PopulateAdminDashboard</display-name>
     <description></description>
@@ -65,6 +71,12 @@
     <servlet-class>com.example.web.DeleteCourse</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>CreateStudentCourse</servlet-name>
+    <display-name>CreateStudentCourse</display-name>
+    <description></description>
+    <servlet-class>com.example.web.CreateStudentCourse</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>CreateAssessmentCriteria</servlet-name>
     <display-name>CreateAssessmentCriteria</display-name>
     <description></description>
@@ -82,6 +94,12 @@
     <description></description>
     <servlet-class>com.example.web.CreateStudentAssessment</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>UpdateStudentAssessment</servlet-name>
+    <display-name>UpdateStudentAssessment</display-name>
+    <description></description>
+    <servlet-class>com.example.web.UpdateStudentAssessment</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>RegisterUser</servlet-name>
     <url-pattern>/RegisterUser</url-pattern>
@@ -97,6 +115,10 @@
   <servlet-mapping>
     <servlet-name>PopulateAssessmentCriteriaForm</servlet-name>
     <url-pattern>/PopulateAssessmentCriteriaForm</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>PopulateStudentAssessmentForm</servlet-name>
+    <url-pattern>/PopulateStudentAssessmentForm</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>PopulateAdminDashboard</servlet-name>
@@ -131,8 +153,16 @@
     <url-pattern>/UpdateAssessmentCriteria</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
+    <servlet-name>CreateStudentCourse</servlet-name>
+    <url-pattern>/CreateStudentCourse</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>CreateStudentAssessment</servlet-name>
     <url-pattern>/CreateStudentAssessment</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UpdateStudentAssessment</servlet-name>
+    <url-pattern>/UpdateStudentAssessment</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
